--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 <section class="section">
     <div class="container">
         <div class="content has-text-centered">
-            <h1 class="title">Flavour</h1>
-            <h5 class="subtitle">Express yourself with fonts, colors, images, and more</h5>
+            <h1 class="title has-text-info is-family-secondary">Flavour</h1>
+            <h5 class="subtitle has-text-grey is-italic">Express yourself with fonts, colors, images, and more</h5>
         </div>
         <div class="tabs is-medium is-centered">
             <ul>
@@ -115,8 +115,8 @@
         </div>
     </div>
 </section>
-<section class="">
-    <div class="">
+<section class="section">
+    <div class="container">
         <div class="content">
             <div class="columns is-multiline justify-center">
                 <div class="column">
@@ -208,7 +208,7 @@
                     <div class="field">
                         <label class="label">Account type</label>
                         <div class="control">
-                            <div class="checkbox">
+                            <div class="select">
                                 <select name="accountType">
                                     <option>Student</option>
                                     <option>Teacher</option>
