--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <title>Assignment 2</title>
 </head>
 <body>
-<section class="section">
-    <div class="hero is-dark is-fullheight">
-        <div class="hero-body">
-            <h1 class="title has-text-weight-normal">
+<section class="hero is-dark is-fullheight">
+    <div class="hero-body">
+        <div class="content">
+            <h1 class="title has-text-weight-bold">
                 Comp426
             </h1>
-            <h2 class="subtitle">
+            <h2 class="subtitle has-text-weight-normal">
                 A web development class
             </h2>
         </div>
